--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5390,11 +5390,40 @@ ul.list-footer li a {
 	font-family:  'Montserrat', sans-serif;
 	font-weight: 800;
 	font-size: 40px;
+	text-transform: uppercase;
 	padding: 4%;
+ }
+ #testimonial #persona-testimonial{
+	font-family:  'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 27px;
  }
  #testimonial p{
 	color: white;
 	padding: 4%;
+	text-align: justify;
+ }
+
+ /* GARANTIA */
+ #seccion-garantia{
+	padding: 0px 120px 0px 120px;
+ }
+ #sello-garantia{
+    width: 400px;
+	padding: 5%;
+ }
+ #texto-garantia h3{
+	font-family:  'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 37px;
+	padding: 41px 0px 31px 0px;
+	line-height: 100%;
+ }
+ #texto-garantia p{
+	font-size: 19px;
+	line-height: 145%;
+	padding-bottom: 30px;
+	text-align: justify;
  }
  
 
@@ -5422,6 +5451,54 @@ ul.list-footer li a {
 		line-height: 115%;
 		text-align: justify;
 	 }
+
+	 #testimonial h3{
+		color: white;
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 40px;
+		padding: 4%;
+		margin-bottom: 24px;
+	 }
+	 #icono-testimonial{
+		width: 101px;
+	 }
+	 #testimonial{
+		background-color: #51B9DC;
+		color: white;
+		padding: 4%;
+		padding: 30px 41px;
+	 }
+	#testimonial #persona-testimonial{
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 37px;
+	 }
+	 #testimonial p{
+		font-size: 24px;
+		color: white;
+		padding: 2%;
+		text-align: justify;
+	 }
+
+	 #seccion-garantia{
+		padding: 0px 0px 30px 0px;
+	 }
+	 #sello-garantia{
+		width: 400px;
+		padding: 5%;
+	 }
+	 #texto-garantia h3{
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 37px;
+		padding: 41px 0px 31px 0px;
+		line-height: 100%;
+	 }
+	 #texto-garantia p{
+		font-size: 19px;
+		line-height: 115%;
+	 }
   }
 
  @media (max-width: 768px) { 
@@ -5446,6 +5523,44 @@ ul.list-footer li a {
 		line-height: 115%;
 		text-align: justify;
 	 }
+	 #testimonial h3{
+		color: white;
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 40px;
+		padding-bottom: 20px;
+	 }
+
+	 #icono-testimonial{
+		width: 101px;
+	 }
+	 #testimonial h3{
+		color: white;
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 40px;
+		padding: 4%;
+		margin-bottom: 24px;
+	 }
+	 #icono-testimonial{
+		width: 101px;
+	 }
+	 #testimonial{
+		background-color: #51B9DC;
+		color: white;
+		padding: 4%;
+	 }
+	#testimonial #persona-testimonial{
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 37px;
+	 }
+	 #testimonial p{
+		font-size: 24px;
+		color: white;
+		padding: 1%;
+		text-align: justify;
+	 }
   }
 
   @media (max-width: 575.98px) { 
@@ -5468,6 +5583,36 @@ ul.list-footer li a {
 		margin-top: -95px;
 		margin-bottom: 41px;
 		line-height: 115%;
+		text-align: justify;
+	 }
+
+	 #testimonial h3{
+		color: white;
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 40px;
+		padding: 4%;
+		margin-bottom: 24px;
+	 }
+
+	 #icono-testimonial{
+		width: 101px;
+	 }
+
+	 #testimonial{
+		background-color: #51B9DC;
+		color: white;
+		padding: 4%;
+	 }
+	#testimonial #persona-testimonial{
+		font-family:  'Montserrat', sans-serif;
+		font-weight: 800;
+		font-size: 37px;
+	 }
+	 #testimonial p{
+		font-size: 24px;
+		color: white;
+		padding: 4%;
 		text-align: justify;
 	 }
    }
